update test dependency versions